GL/Projet_GL/src/test/deca/context/invalid/methods/method_inex.deca
// Description:
//    Appel de methode inexistante
//
// Resultats:
//    Methode non definie dans la classe.
//    Erreur affichée: Identifier f is not defined
//
class A {}
{
   A a;
   a.f();
}
